_Layout,Viewstart And Viewimports and View Bag functionality is added

--- a/Core.BookStore/Core.BookStore/Views/Home/ContactUs.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/ContactUs.cshtml
@@ -3,10 +3,9 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
             <li class="breadcrumb-item"><a href="#">Page1</a></li>
-            <li class="breadcrumb-item active" aria-current="page">About Us</li>
+            <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
         </ol>
     </nav>
 }
-
-    <h1>Welcome to About Us</h1>
+<h1>Contact Us</h1>
 
