--- a/Core.BookStore/Core.BookStore/wwwroot/css/site.css
+++ b/Core.BookStore/Core.BookStore/wwwroot/css/site.css
@@ -1,6 +1,26 @@
 ﻿body {
 }
 .logo{
-    height:100px;
-    width:100px;
+    height:200px;
+    width:200px;
 }
+
+
+/*sticky footer style*/
+html{
+    position:relative;
+    min-height:100%;
+}
+
+body{
+margin-bottom:60px;
+}
+
+.footer{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    white-space:nowrap;
+    line-height:75px;
+}
+
