--- a/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,17 +1,25 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model IEnumerable<BookModel>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>GetAllBooks</title>
-</head>
-<body>
-    <h1>Get All Books</h1>
-    <button>Click me</button>
-</body>
-</html>
+<div class="container">
+    <h3 class="display-4">All Books</h3>
+    <div class="row">
+        @foreach (var book in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img src="~/images/book1.jpg" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img>
+                    <div class="card-body">
+                        <h3 class="card-title">@book.Title</h3>
+                        <p class="card-text">@book.Description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">view details</a>
+                            </div>
+                            <small class="text-muted">@book.Author</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
