--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -1,26 +1,89 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    Layout = null;
+﻿@{
+    dynamic data = ViewBag.Data;
 }
-<!doctype Html>
-<html>
-<head>
-    <title>Index</title>
-    <link href="~/css/site.css" rel="stylesheet" />
-    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
-    <script src="~/lib/jquery/jquery.min.js"></script>
+
+@section breadcrumb{
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Page1</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Index</li>
+        </ol>
+    </nav>
+}
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1>Welcome to Book store @ViewBag.Title</h1>
+        <p class="lead text-muted">
+            @data.Id @data.Name<br />
+            Id=@ViewBag.Type.Id<br />
+            Author=@ViewBag.Type.Author<br />
+            This is test para This is test para This is test para This is test para This is test para
+            This is test para This is test para
+        </p>
+        <p>
+            <a href="#" class="btn btn-primary my-2">Search books</a>
+        </p>
+    </div>
+</section>
+
+<div class="py-5 bg-light">
+    <div class="container">
+        <h3 class="h3">Top Books</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img src="~/images/book1.jpg" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img>
+                    <div class="card-body">
+                        <p class="card-text">This section will be used to display the short description of book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-outline-secondary">view details</a>
+                            </div>
+                            <small class="text-muted">Author Name</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img src="~/images/book1.jpg" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img>
+                    <div class="card-body">
+                        <p class="card-text">This section will be used to display the short description of book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-outline-secondary">view details</a>
+                            </div>
+                            <small class="text-muted">Author Name</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <img src="~/images/book1.jpg" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img>
+                    <div class="card-body">
+                        <p class="card-text">This section will be used to display the short description of book</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-sm btn-outline-secondary">view details</a>
+                            </div>
+                            <small class="text-muted">Author Name</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@section scripts{
     <script>
-        $(document).ready(function(){
-            alert("Page is loaded successfully")
-        })
+        // $(document).ready(function () {
+        //     alert("document is ready!")
+        // });
     </script>
-</head>
-<body class="container">
-    <img src="~/images/logo.jpg" alt="Logo" class="logo" />
-    <h1 class="h1">Welcome to Book Store Application</h1>
-    <input type="button" class="btn btn-primary" value="Save" />
-    <p>This is sample paragraph</p>
-</body>
-</html>
+}
+
+
+
+
