--- a/Core.BookStore/Core.BookStore/Views/Book/GetBook.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetBook.cshtml
@@ -1,4 +1,7 @@
-﻿@model BookModel
+﻿@{
+    ViewData["Title"] = "Get Book - " + Model.Title;
+}
+@model BookModel
 
 <div class="container">
     <h3 class="display-4">Book Details</h3>
