ViewData Attribute functionality is added

--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@{
-    ViewData["Title"]="Home";
-    var bookinfo = ViewData["book"] as BookModel;
+﻿@* @{
+    ViewData["Title"] = "Home";
+} *@
+@{
+    var book = ViewData["Book"] as BookModel;
 }
 @section breadcrumb{
     <nav aria-label="breadcrumb">
@@ -13,12 +15,12 @@
 }
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Welcome to Book store @ViewData["prop"]</h1>
-        <h1>Id = @bookinfo?.Id</h1>
-        <h1>Author = @bookinfo?.Author</h1>
+        <h1>Welcome to Book store @ViewData["CustomProp"]</h1>
+        <h1>ID = @book?.Id</h1>
+        <h1>title = @book?.Title</h1>
         <p class="lead text-muted">
-           
-      
+
+
             This is test para This is test para This is test para This is test para This is test para
             This is test para This is test para
         </p>
