Dynamic views functionality is added

--- a/Core.BookStore/Core.BookStore/Views/Book/GetBook.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetBook.cshtml
@@ -1,18 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Get Book - " + Model.Title;
+    ViewData["Title"] = "Get Book - " + Model.name;
 }
-@model BookModel
+@* @model BookModel *@
 
-<div class="container">
+@* <div class="container">
     <h3 class="display-4">Book Details</h3>
     <div class="row">
         <div class="col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                @* <ol class="carousel-indicators">
+                <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol> *@
+                </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="~/images/book/book1.jpg" alt="First slide">
@@ -91,5 +91,5 @@
             
         </div>
     </div>
-</div>
+</div> *@
 
