--- a/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "All Books";
 }
-@model IEnumerable<BookModel>
+@* @model IEnumerable<BookModel> *@
 
 <div class="container">
     <h3 class="display-4">All Books</h3>
