--- a/Core.BookStore/Core.BookStore/Views/Book/GetBook.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetBook.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Get Book - " + Model.name;
+    ViewData["Title"] = "Get Book - " + Model.Title;
 }
 @* @model BookModel *@
 
-@* <div class="container">
+<div class="container">
     <h3 class="display-4">Book Details</h3>
     <div class="row">
         <div class="col-md-6">
@@ -70,7 +70,7 @@
     <div class="py-5 bg-light">
         <h3 class="h3">Similar Books</h3>
         <div class="row">
-            @for (int i = 0; i < 5; i++)
+            @for (int i = 0; i < 6; i++)
             {
                 <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
@@ -80,7 +80,7 @@
                             <p class="card-text">book.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="/book/getbook/book.Id" class="btn btn-sm btn-outline-secondary">view details</a>
+                                    <a  href="/book/getbook/book.Id" class="btn btn-sm btn-outline-secondary">view details</a>
                                 </div>
                                 <small class="text-muted">book.Author</small>
                             </div>
@@ -91,5 +91,5 @@
             
         </div>
     </div>
-</div> *@
+</div>
 
