--- a/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-togglable-sm navbar-light bg-White border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
                     <img src="~/images/book.png" alt="Logo" height="50px" /> Book Store
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,16 +27,16 @@
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/">Home </a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/home/aboutus">About Us</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/home/contactus">Contact Us</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="contactus">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/book/getallbooks">All Books</a>
+                            <a class="nav-link text-dark" asp-controller="book" asp-action="getallbooks">All Books</a>
                         </li>
                     </ul>
                 </div>
