Environment taghelper is added in layout file

--- a/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
@@ -10,7 +10,7 @@
         {
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="~/images/book1.jpg" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img>
+                    <img src="~/images/book1.jpg" asp-append-version="true" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img>
                     <div class="card-body">
                         <h3 class="card-title">@book.Title</h3>
                         <p class="card-text">@book.Description</p>
