--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -2,21 +2,10 @@
     ViewData["Title"] = "Home";
 }
 
-@section breadcrumb{
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Page1</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Index</li>
-        </ol>
-    </nav>
-}
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Welcome to Book store @ViewData["CustomProp"]</h1>
+        <h1>Welcome to Book store</h1>
         <p class="lead text-muted">
-
-
             This is test para This is test para This is test para This is test para This is test para
             This is test para This is test para
         </p>
