--- a/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
@@ -8,7 +8,15 @@
         <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        @* <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" /> *@
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              asp-fallback-href="~/lib/twitter-bootstrap/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position"
+              asp-fallback-test-value="absolute"
+              integrity=""
+              crossorigin="anonymous">
     </environment>
     <link href="~/css/site.css" rel="stylesheet" />
 
@@ -43,6 +51,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="book" asp-action="getallbooks">All Books</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="book" asp-action="AddNewBook">Add New Book</a>
                         </li>
                     </ul>
                 </div>
