--- a/Core.BookStore/Core.BookStore/Views/Book/AddNewBook.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/AddNewBook.cshtml
@@ -5,26 +5,41 @@
 
 <div class="container">
     <h3 class="display-3">Add New Book</h3>
+    <hr />
+    @if (ViewBag.IsSuccess == true)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Congratulations</strong> You should added new book successfully.<br />
+            Click <a asp-controller="Book" asp-action="GetBook" asp-route-id="@ViewBag.BookId">here</a> to view the details
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
     <form method="post" asp-action="AddNewBook" asp-controller="Book">
         <div class="form-group">
             <label asp-for="Title"></label>
-            <input asp-for="Title" class="form-control"/>
+            <input asp-for="Title" class="form-control" />
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Author"></label>
-            <input asp-for="Author" class="form-control"/>
+            <input asp-for="Author" class="form-control" />
+            <span asp-validation-for="Author" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Description"></label>
             <textarea asp-for="Description" class="form-control"></textarea>
+            <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="TotalPages"></label>
             <input asp-for="TotalPages" class="form-control" />
+            <span asp-validation-for="TotalPages" class="text-danger"></span>
         </div>
         <br />
         <div class="form-group">
-            <input type="submit" value="Add Book" class="btn btn-primary"/>
+            <input type="submit" value="Add Book" class="btn btn-primary" />
         </div>
     </form>
 </div>
