--- a/Core.BookStore/Core.BookStore/Views/Book/AddNewBook.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/AddNewBook.cshtml
@@ -17,23 +17,35 @@
         </div>
     }
     <form method="post" asp-action="AddNewBook" asp-controller="Book">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
         <div class="form-group">
-            <label asp-for="Title"></label>
+            <label asp-for="Language" class="form-label"></label>
+            <select class="form-select" asp-for="Language">
+                <option value="">Please choose book language</option>
+                <option value="Telugu">Telugu(one of the best language)</option>
+                <option value="Hindi">Hindi(second language)</option>
+                <option value="English">English(global language)</option>
+            </select>
+            <span asp-validation-for="Language" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Title" class="form-label"></label>
             <input asp-for="Title" class="form-control" />
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Author"></label>
+            <label asp-for="Author" class="form-label"></label>
             <input asp-for="Author" class="form-control" />
             <span asp-validation-for="Author" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="Description"></label>
+            <label asp-for="Description" class="form-label"></label>
             <textarea asp-for="Description" class="form-control"></textarea>
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="TotalPages"></label>
+            <label asp-for="TotalPages" class="form-label"></label>
             <input asp-for="TotalPages" class="form-control" />
             <span asp-validation-for="TotalPages" class="text-danger"></span>
         </div>
