--- a/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
@@ -69,6 +69,9 @@
     <footer class="footer border-top text-muted text-center">
         <div class="container">
             Copyright &copy; Book Store @DateTime.Now.Year
+           @*  <a href="mailto:test@gmail.com">test@gmail.com</a>
+            <custom-email asp-for=""></custom-email> *@
+            <custom-email my-email="test@gmail.com"></custom-email>
         </div>
     </footer>
     <environment include="Development">
