--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -17,9 +17,7 @@
 
 <div class="py-5 bg-light">
     <div class="container">
-       @*  <h3 class="h3">Top Books</h3> *@
-       <big>Top Books</big>
-       <p big>Top Books using big tag attribute</p>
+        <h3 class="h3">Top Books</h3>
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
