--- a/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Book/GetAllBooks.cshtml
@@ -9,21 +9,7 @@
         @foreach (var book in Model)
         {
             <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    @*   <img src="~/images/book1.jpg" asp-append-version="true" width="100%" height="225" class="bd-placeholder-mg card-img-top"></img> *@
-                    <img src="@book.CoverImageUrl" class="img-thumbnail">
-                    <div class="card-body">
-                        <h3 class="card-title">@book.Title</h3>
-                        <p class="card-text">@book.Description</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a asp-controller="book" asp-action="getbook" asp-route-id="@book.Id"
-                                   class="btn btn-sm btn-outline-secondary">view details</a>
-                            </div>
-                            <small class="text-muted">@book.Author</small>
-                        </div>
-                    </div>
-                </div>
+                <partial name="_bookThumbnail" model="@book" />
             </div>
         }
     </div>
