--- a/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Shared/_Layout.cshtml
@@ -22,58 +22,14 @@
 
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-togglable-sm navbar-light bg-White border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                    <img src="~/images/book1.jpg" asp-append-version="true" alt="Logo" height="50px" /> Book Store
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="btn btn-outline-primary" href="#">Login </a>
-                            <a class="btn btn-primary" href="#">Register </a>
-                        </li>
-
-                    </ul>
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="aboutus">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="contactus">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="book" asp-action="getallbooks">All Books</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="book" asp-action="AddNewBook">Add New Book</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <partial name="_header" />
     <div>
         <main role="main">
             @RenderSection("breadcrumb",required:false)
             @RenderBody()
         </main>
     </div>
-    <footer class="footer border-top text-muted text-center">
-        <div class="container">
-            Copyright &copy; Book Store @DateTime.Now.Year
-            @*  <a href="mailto:test@gmail.com">test@gmail.com</a>
-            <custom-email asp-for=""></custom-email> *@
-            <custom-email my-email="test@gmail.com"></custom-email>
-        </div>
-    </footer>
+    <partial name="_footer" />
     <environment include="Development">
         <script src="~/lib/jquery/jquery.js"></script>
         <script src="~/jquery-validate/jquery.validate.js"></script>
