--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -20,13 +20,24 @@
         <h3 class="h3">Top Books</h3>
         <div class="row">
             <div class="col-md-4">
-                <partial name="_bookThumbnail" model="new BookModel()" />
+                @* <partial name="_bookThumbnail" model="new BookModel()" /> *@
+                @Html.Partial("_bookThumbnail",new BookModel())
             </div>
             <div class="col-md-4">
-                <partial name="_bookThumbnail" model="new BookModel()" />
+                @* <partial name="_bookThumbnail" model="new BookModel()" /> *@
+                @await Html.PartialAsync("_bookThumbnail",new BookModel())
             </div>
             <div class="col-md-4">
-                <partial name="_bookThumbnail" model="new BookModel()" />
+               @*  <partial name="_bookThumbnail" model="new BookModel()" /> *@
+                @{
+                    Html.RenderPartial("_bookThumbnail", new BookModel());
+                }
+            </div>
+            <div class="col-md-4">
+                @*  <partial name="_bookThumbnail" model="new BookModel()" /> *@
+                @{
+                   await Html.RenderPartialAsync("_bookThumbnail", new BookModel());
+                }
             </div>
         </div>
     </div>
