--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -18,30 +18,9 @@
 <div class="py-5 bg-light">
     <div class="container">
         <h3 class="h3">Top Books</h3>
-        @* @await Component.InvokeAsync("TopBooks") *@
-        <vc:top-books></vc:top-books>
-        <div class="row">
-            <div class="col-md-4">
-                @* <partial name="_bookThumbnail" model="new BookModel()" /> *@
-                @Html.Partial("_bookThumbnail",new BookModel())
-            </div>
-            <div class="col-md-4">
-                @* <partial name="_bookThumbnail" model="new BookModel()" /> *@
-                @await Html.PartialAsync("_bookThumbnail",new BookModel())
-            </div>
-            <div class="col-md-4">
-               @*  <partial name="_bookThumbnail" model="new BookModel()" /> *@
-                @{
-                    Html.RenderPartial("_bookThumbnail", new BookModel());
-                }
-            </div>
-            <div class="col-md-4">
-                @*  <partial name="_bookThumbnail" model="new BookModel()" /> *@
-                @{
-                   await Html.RenderPartialAsync("_bookThumbnail", new BookModel());
-                }
-            </div>
-        </div>
+        @await Component.InvokeAsync("TopBooks",new {count=3})
+        @* <vc:top-books count="10"></vc:top-books> *@
+
     </div>
 </div>
 @section scripts{
