--- a/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
+++ b/Core.BookStore/Core.BookStore/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home";
 }
+@inject Core.BookStore.Repository.IBookRepository _bookRepository;
 
 <section class="jumbotron text-center">
     <div class="container">
@@ -14,6 +16,10 @@
         </p>
     </div>
 </section>
+@foreach (var item in await _bookRepository.GetAllBooks())
+{
+    <h1>@item.Title</h1>
+}
 
 <div class="py-5 bg-light">
     <div class="container">
